<resources>
    <string name="app_name">Doc creater</string>
    <string name="please_select_category">Please select the category</string>
    <string name="convert_the_image">Select the output format</string>
    <string name="select_any_pdf">Select a doccument to view, print, share .</string>
    <string name="view"> View</string>
    <string name="print"> Print</string>
    <string name="share"> Share</string>
    <string name="select_any_option">Select any option.</string>
    <string-array name="category">
        <item>Create new pdf</item>
        <item>Create new doc</item>
    </string-array>
    <string name="create_pdf">Create new pdf</string>
    <string name="create_doc">Create new doc</string>
    <string name="no_file_found">You currently have no documents created.\n Click on the \"+\" icon to create a new document.</string>
    <string-array name="generate_category">

        <item>c new docs</item>
        <item>create new pdf</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="cont">Continue</string>
    <!-- fonts -->
    <string name="lato_light">Lato Light</string>
    <string name="lato_regular">Lato Regular</string>
    <string name="lato_bold">Lato Bold</string>
    <string name="lato_medium">Lato Medium</string>
    <string name="lato_thin">Lato Thin</string>
    <string name="roboto_light">Roboto Light</string>
    <string name="roboto_regular">Roboto Regular</string>
    <string name="roboto_bold">Roboto Bold</string>
    <string name="roboto_medium">Roboto Medium</string>
    <string name="roboto_thin">Roboto Thin</string>


</resources>
