<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/black"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingLeft="26dp"
        android:id="@+id/tv_view"
        android:textSize="16sp"
        android:text="@string/view"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_print"
        android:textSize="16sp"
        android:text="@string/print"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingLeft="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="13dp"
        android:textColor="@color/black"
        android:id="@+id/tv_share"
        android:textSize="16sp"
        android:text="@string/share"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingLeft="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>