<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akash.demoapplication.ui.activity.IntroductionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
    <com.example.akash.demoapplication.utils.CustomTextView
        android:id="@+id/txtHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:textColor="@color/black"
        app:textFont="@string/lato_bold"
        android:text="@string/convert_the_image"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHeading"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:gravity="center">
   <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <RadioButton
                android:id="@+id/rbtn_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="16sp"
                android:text="@string/create_pdf" />
       <RadioButton
           android:id="@+id/rbtn_doc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.5"
           android:textSize="16sp"
           android:text="@string/create_doc"/>
   </RadioGroup>

    </LinearLayout>

    </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn_primary"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:text="Generate" />
        <Button
            android:id="@+id/btn_list_doccument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn_primary"
            android:textColor="@color/white"
            android:text="View previous documents" />
    </LinearLayout>
    -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btnCreate"
             android:src="@drawable/ic_add_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
             android:layout_marginBottom="20dp"
             android:layout_marginRight="10dp"
             />
         <Button
             android:id="@+id/btn_list_doccument"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:textColor="@color/white"
             android:text="View previous documents" />

     </LinearLayout>


</RelativeLayout>
